--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,7 @@
 server.port=9000
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/boot-blogapi
-spring.datasource.username=root
-spring.datasource.password=
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
@@ -20,7 +18,7 @@ project.image=images/
 
 logging.level.org.springframework.security=DEBUG
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-#spring.profiles.active=dev
+spring.profiles.active=dev
 
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
